# backend_MyStore

./: alembic.ini  pyproject.toml  requirements.txt
Base de datos/: Bd ultima.txt  Bd1.0.sql
app/: config.py  main.py
app/model/: __init__.py  carrito_compra.py  compra.py  comprador.py  devolucion.py  envio.py  lista_deseos.py  mixins.py  plantilla.py  producto.py  suscripcion.py  tienda.py  usuario.py  vendedor.py  venta.py
app/rutas/: carrito.py  compra.py  comprador.py  devolucion.py  envio.py  lista_deseos.py  plantilla.py  producto.py  suscripcion.py  tienda.py  usuario.py  vendedor.py  venta.py
migrations/versions/: 740daa57cc66_correction_migration.py
uploads/: 45459ee9-ed1b-4515-9f2a-b253bc7cd5a2  4725fbee-1384-4768-9bc2-58ead725701a.jfif  efa05106-56be-433a-ae26-bbe4b930a7fe.jfif
